# svg-benchmark

./: .env.template  LICENSE  README.md  pyproject.toml  run_benchmark.sh  run_tests.sh
output/: mean_scores.csv  raw.csv  scores.csv
svg_benchmark/: benchmark.py  create_comparison_grid.py  create_target_grid.py  debug_dataset.py  generate.py  score.py  visualize.py
svg_benchmark/models/: presto_model.py  test_presto_adapter.py
svg_benchmark/utils/: __init__.py  image_processing.py  model_interface.py  svg_processing.py
